--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,18 +1,14 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 'android-N'
-    buildToolsVersion "24.0.0-rc3"
-
+    compileSdkVersion 29
     defaultConfig {
         applicationId "com.example.naveenkumark.testjava8"
         minSdkVersion 15
-        targetSdkVersion 'N'
+        targetSdkVersion 29
         versionCode 1
         versionName "1.0"
-        jackOptions {
-            enabled true
-        }
+
     }
     buildTypes {
         release {
@@ -27,7 +23,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.3.0'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    testImplementation 'junit:junit:4.12'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
 }
