--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,28 @@ android {
         targetCompatibility 1.8
         sourceCompatibility 1.8
     }
+
+    ///MAster brNCH
+    flavorDimensions 'cpuArch'
+    productFlavors {
+        arm8 {
+            dimension 'cpuArch'
+            ndk {
+                abiFilters 'arm64-v8a', 'armeabi-v7a'
+            }
+        }
+        x86_64 {
+            dimension 'cpuArch'
+            ndk {
+                abiFilters 'x86_64', 'x86'
+            }
+        }
+        universal {
+            dimension 'cpuArch'
+            // include all default ABIs. with NDK-r16,  it is:
+            //   armeabi-v7a, arm64-v8a, x86, x86_64
+        }
+    }
 }
 
 dependencies {
